-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.8.0
-
None
In QtCreator 2.7 each time a project was run, QtCreator automatically deployed the package, connected to the device and started the application.
Now you need to go to Tools -> Options -> Devices and manually "connect to the device" before the application can be launched by QtCreator.
Otherwise you will get the error message "Device not connected" which is very misleading.
Therefore this is major change of behavior between the two QtCreator versions.
I suggest either to check for and if necessary automatically establish the connection or to provide a distinct error message and how to resolve it.