Qnx: Automatically connect to device when running an app

Task-number: QTCREATORBUG-9839

Change-Id: Iac6e6bd8d4f16d09c82658b9cd02518ee6300e1b
Reviewed-by: Wolfgang Bremer <wbremer@blackberry.com>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>