src/plugins/qnx/blackberrydeviceconnectionmanager.cpp
@@ -198,6 +198,8 @@ void BlackBerryDeviceConnectionManager::handleDeviceConnected()
                                                     ProjectExplorer::IDevice::DeviceReadyToUse);
         }
     }
+
+    emit deviceConnected();
 }
 
 void BlackBerryDeviceConnectionManager::handleDeviceDisconnected()
