src/plugins/qnx/blackberrydeviceconnectionmanager.h
@@ -63,6 +63,7 @@ public:
 signals:
     void connectionOutput(Core::Id deviceId, const QString &output);
     void deviceAboutToConnect(Core::Id deviceId);
+    void deviceConnected();
 
 public slots:
     void connectDevice(Core::Id deviceId);
